# agent-skills

./: .gitignore  Cargo.toml  LICENSE  README.md  SKILL.md
.github/workflows/: rust.yml
agent-observability/agent-observability-auto-experiment/: SKILL.md
agent-observability/agent-observability-eval-bootstrap/: SKILL.md
agent-observability/agent-observability-eval-pipeline/: SKILL.md
agent-observability/agent-observability-experiment-analyzer/: SKILL.md
agent-observability/agent-observability-experiment-py-bootstrap/: SKILL.md
agent-observability/agent-observability-replay-experiment/: SKILL.md
agent-observability/agent-observability-replay-trace/: SKILL.md
agent-observability/agent-observability-session-classify/: SKILL.md
agent-observability/agent-observability-trace-rca/: SKILL.md
dd-apm/: SKILL.md
dd-apm/sampling/: SKILL.md
dd-apm/service-remapping/: SKILL.md
dd-apps/datadog-app/: SKILL.md
dd-audit/ai-activity-audit/: SKILL.md
dd-audit/compliance-report/: SKILL.md
dd-audit/cost-spike-investigation/: SKILL.md
dd-audit/key-compromise/: SKILL.md
dd-audit/security-investigation/: SKILL.md
dd-browser-sdk/: SKILL.md
dd-browser-sdk/upgrade-v5/: SKILL.md
dd-browser-sdk/upgrade-v6/: SKILL.md
dd-browser-sdk/upgrade-v7/: SKILL.md
dd-docs/: SKILL.md
dd-instrumentation/: SKILL.md  onboarding.md  troubleshooting.md
dd-llmo/eval-bootstrap/: SKILL.md
dd-llmo/eval-pipeline/: SKILL.md
dd-llmo/eval-session-classify/: SKILL.md  (+1 more)
dd-logs/: SKILL.md
dd-monitors/: SKILL.md
dd-pup/: SKILL.md
src/: lib.rs
(+66 files in other folders)
